name:                eve-rb-compare
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable eve-compare1
  main-is:             Main1.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10, reactive-banana
  hs-source-dirs:      src
  default-language:    Haskell2010

executable eve-compare2
  main-is:             Main2.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10, reactive-banana
  hs-source-dirs:      src
  default-language:    Haskell2010

executable eve-compare3
  main-is:             Main3.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10, reactive-banana
  hs-source-dirs:      src
  default-language:    Haskell2010

executable eve-compare4
  main-is:             Main4.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10, reactive-banana, random
  hs-source-dirs:      src
  default-language:    Haskell2010

executable eve-compare5
  main-is:             Main5.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10, reactive-banana, random
  hs-source-dirs:      src
  default-language:    Haskell2010

executable eve-compare6
  main-is:             Main6.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10, reactive-banana, random
  hs-source-dirs:      src
  default-language:    Haskell2010

executable eve-compare7
  main-is:             Main7.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10, reactive-banana, random
  hs-source-dirs:      src
  default-language:    Haskell2010

